propogate profile pic across components
